Revert jdk17 APIs.